<resources>
    <string name="app_name">Between Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon</string>

    <!-- Description strings -->
    <string name="icon_desc">App logo</string>
    <string name="nav_drawer_desc">Open Navigation drawer</string>
    <string name="send_desc">Send</string>
    <string name="dp_desc">Profile picture</string>
    <string name="call_desc">Call</string>
    <string name="menu_desc">Menu</string>
    <string name="no_messages_icon_desc">Just a random cute image</string>
    <string name="back_img_desc">Image to select as new background</string>
    <string name="expansion_desc">Expand this item</string>
    <string name="settings_background_img_desc">Just a background to apply</string>
    <string name="download_icon_desc">Download</string>

    <!-- Hint strings -->
    <string name="phone_hint">Phone no.</string>
    <string name="code_hint">OTP</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="dob_hint">Enter your date of birth</string>
    <string name="message_hint">Message</string>

    <!-- Standard strings -->
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="convo_start">Please start the conversation by sending a message</string>
    <string name="online">Online</string>
    <string name="background_settings">Background Settings</string>
    <string name="themes_settings">Themes Settings</string>
    <string name="background_change">Select a background for the app</string>
    <string name="background_blur">Background blur?</string>
    <string name="no_wallpaper">No wallpaper</string>
    <string name="wallpaper_selected">Selected</string>
    <string name="unread">Unread</string>

    <!-- Navigation drawer strings -->
    <string name="nav_general">General</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_docs">Docs</string>
    <string name="nav_for_us">For Us</string>
    <string name="nav_poems">Poems</string>
    <string name="nav_dreams">Dreams</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_memories">Memories</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_ds">DS Zone</string>
    <string name="nav_logout">Logout</string>

    <!-- Chat menu strings -->
    <string name="menu_clear_messages">Clear chat</string>
    <string name="menu_export_chat">Export chat</string>
    <string name="menu_add_shortcut">Add shortcut</string>

    <!-- Chat send menu strings -->
    <string name="menu_schedule_message">Schedule message</string>
    <string name="menu_whatsapp">Whatsapp</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_telegram">Telegram</string>

    <!-- Themes strings -->
    <string name="theme_bb">Black and blue</string>
    <string name="theme_br">Black and red</string>
    <string name="theme_wp">White and pink</string>
    <string name="theme_normal">Normal</string>

    <!-- Data strings -->
    <string name="data_name">Name</string>
</resources>