<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChatFragment">

    <FrameLayout
        android:id="@+id/chat_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/chat_nav_open"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/nav_drawer_desc"
                android:padding="4dp"
                android:src="@drawable/menu_open"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/chat_name_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chat_call"
                app:layout_constraintStart_toEndOf="@id/chat_nav_open"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/chat_dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/dp_desc"
                    android:padding="4dp"
                    android:src="@drawable/person" />

                <TextView
                    android:id="@+id/chat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="Nilesh"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/chat_call"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/call_desc"
                android:padding="8dp"
                android:src="@drawable/call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_50">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chat_message_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_40"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/chat_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="@string/message_hint"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/white_30"
                    android:gravity="top|start"
                    android:hint="@string/message_hint"
                    android:inputType="textMultiLine|textCapSentences|textLongMessage"
                    android:maxLines="5"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/chat_send"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/chat_send"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/send_desc"
                    android:padding="8dp"
                    android:src="@drawable/send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>